reload style.scss

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,8 +1,34 @@
 @import 'base/_variables.scss';
 
+
 *   {
     font-family: 'Museo Sans Cyrl', sans-serif;
 }
-p {
-    color: red;
+
+.container {
+    width: 950px;
+    margin: 0 auto;
 }
+
+@import 'blocks/_promo.scss';
+@import 'blocks/_header.scss';
+@import 'blocks/_buttons.scss';
+// .promo {
+//     &__wrapper {
+//         width: 550px;
+//     }
+//     &__icon {
+//         width: 45px;
+//         height: 45px;
+//         img {
+//         display: block;
+//         width: 100%;
+//         }
+//     }
+//     &__icons {
+//         display: flex;
+//         justify-content: space-between;
+//         align-items: center;
+//         // flex-direction: column;
+//     }
+// }
