complite second block

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,6 +13,8 @@
 @import 'blocks/_promo.scss';
 @import 'blocks/_header.scss';
 @import 'blocks/_buttons.scss';
+@import 'blocks/_title.scss';
+@import 'blocks/_advantages.scss';
 // .promo {
 //     &__wrapper {
 //         width: 550px;
