--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,6 +15,7 @@
 @import 'blocks/_buttons.scss';
 @import 'blocks/_title.scss';
 @import 'blocks/_advantages.scss';
+@import 'base/_media.scss';
 // .promo {
 //     &__wrapper {
 //         width: 550px;
