--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -1,6 +1,7 @@
 @media (max-width: 991px) {
     .container {
         width: 100%;
+        
     }
     .promo {
        
@@ -19,6 +20,13 @@
         }
         &__items {
             width: 31%;
+        }
+    }
+    .consultation {
+        padding: 100px 0 105px 50px;
+        .title {
+            font-size: 30px;
+            line-height: 38px;
         }
     }
 }
@@ -43,7 +51,7 @@
             align-items: center;
         }
         &__items {
-            width: 60%;
+            width: 85%;
         }
         &__subtitle {
             font-size: 22px;
@@ -52,12 +60,21 @@
             font-size: 16px;
         }
     }
+    .consultation {
+        padding: 80px 0 80px 30px;
+        &__descr {
+            margin-top: 20px;
+            font-size: 20px;
+            line-height: 25px;
+        }
+        .title {
+            font-size: 24px;
+            line-height: 38px;
+        }
+    }
  }
 
  @media (max-width: 575px) {
-	.comtainer {
-    	padding: 0 10px;
-	}
 	.promo {
 		.header {
 			&__logo {
@@ -94,6 +111,19 @@
 			margin: 5px 0 0 20px;
 		}
 	}
-	
+	.consultation {
+        padding: 50px 10px 50px 10px;
+        &__descr {
+            margin-top: 20px;
+            font-size: 15px;
+            line-height: 25px;
+        }
+        .title {
+            font-size: 20px;
+            line-height: 25px;
+            text-align: center;
+        }
+
+    }
 
  }
