add block 3 + adapt p2

--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -3,17 +3,27 @@
     height: 32px;
     background: $main_color;
     border-radius: 5px;
-    border: none;
     font-weight: 500;
     font-size: 12px;
     line-height: 19px;
     text-align: center;
     text-transform: uppercase;
     color: #FFFFFF;
+    border: 0;
+    &:hover {
+        background-color: rgb(230, 141, 9)
+    }
     &_main {
         margin-top: 67px;
-        width: 300px;
-        height: 50px;
+        width: 303px;
+        height: 54px;
         font-size: 16px;
     }
+    &_submit {
+        width: 100%;
+        height: 54px;
+        font-size: 16px;
+        margin-top: 0;
+    }
+   
 }
