--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -4,4 +4,11 @@
     line-height: 30px;
     text-align: center;
     color: #0D0D0D;
+    &_left {
+        font-size: 36px;
+        line-height: 54px;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        text-align: left;
+    }
 }
