--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,23 +15,6 @@
 @import 'blocks/_buttons.scss';
 @import 'blocks/_title.scss';
 @import 'blocks/_advantages.scss';
+@import 'blocks/_consultation.scss';
+@import 'blocks/_forms.scss';
 @import 'base/_media.scss';
-// .promo {
-//     &__wrapper {
-//         width: 550px;
-//     }
-//     &__icon {
-//         width: 45px;
-//         height: 45px;
-//         img {
-//         display: block;
-//         width: 100%;
-//         }
-//     }
-//     &__icons {
-//         display: flex;
-//         justify-content: space-between;
-//         align-items: center;
-//         // flex-direction: column;
-//     }
-// }
