--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,4 +17,6 @@
 @import 'blocks/_advantages.scss';
 @import 'blocks/_consultation.scss';
 @import 'blocks/_forms.scss';
+@import 'blocks/_carusel.scss';
 @import 'base/_media.scss';
+
