--- a/src/sass/blocks/_forms.scss
+++ b/src/sass/blocks/_forms.scss
@@ -17,4 +17,8 @@
             margin-bottom: 17px;
             }
     }
+    &_m0auto_mt25 {
+        margin: 0 auto;
+        margin-top: 25px;
+    }
 }
