--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,5 +19,10 @@
 @import 'blocks/_consultation.scss';
 @import 'blocks/_forms.scss';
 @import 'blocks/_carusel.scss';
+@import 'blocks/_catalog.scss';
+@import 'blocks/_reviews.scss';
+@import 'blocks/_footer.scss';
+@import 'blocks/_modals.scss';
 @import 'base/_media.scss';
+
 
